src/test/deca/context/invalid/void-declaration.deca
// Description : 
//	 test de déclarer une variable de type void
// Resultats :
//	 9:4: we can't declare an identifier with type void


{
    int y;
    void x;
}